--- a/sundmad.html
+++ b/sundmad.html
@@ -46,7 +46,7 @@ Du kan spare en hel del, hvis du planlægger din madplan efter, hvad der er på 
             <b>Tøm køleskabet:</b> Sørg altid for, at bruge alle de ting du har i dit køleskab. Du kan f.eks. på din madplan have en dag f.eks. søndag, som hedder ”tøm køleskabet”. Her Får du spist alle de rester, der har været fra ugens løb. Bare rolig – du behøves ikke selv være kreativ. Du kan på denne <a href="http://opskrifter.dk/Toem-koeleskabet.149.0.html">side</a> indsatse dine madrester, hvorefter den laver et alternativ til en opskrift. Enjoy! 
 </p>
             <div id="kylling">
-                <img src="images/Madpasu.jpg" alt="madpåsu" width=440px; height=380px;/>
+                <img src="images/madpasu.jpg" alt="madpåsu" width=440px; height=380px;/>
             </div>
         
         </div>
